public struct Message
{
    public string Text;
    public DateTime Time;
}